--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.error.include-exception=false
 server.error.include-stacktrace=never
 server.error.include-message=always
 
-spring.datasource.url=jdbc:mysql://localhost:3306/parking?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=UTC&useLegacyDate
-spring.datasource.password=
-spring.datasource.username=root
+spring.datasource.url=jdbc:postgresql://localhost:5432/parking
+spring.datasource.password=123
+spring.datasource.username=admin
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
